Rewrite lab overviews with clear, simple explanations
Lab 1 Overview:
- Explain disaggregated serving in plain language
- Describe what gets deployed (2 GPUs, specialized workers)
- Connect to Labs 2 and 3 for learning progression
- Replace bullet points with explanatory paragraphs

Lab 3 Overview:
- Explain distributed serving as data parallelism
- Clarify KV cache sharing concept and benefits
- Contrast with Lab 1 architecture (specialized vs generalist workers)
- Explain when to use each approach
- Show how both architectures could run together
- Use conversational, accessible language

Focus on helping students understand WHAT is being deployed
and WHY it's different, not just listing features

--- a/01-dynamo-deployment-guide.ipynb
+++ b/01-dynamo-deployment-guide.ipynb
@@ -2,25 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "050356ff",
+   "id": "ebb731b5",
    "metadata": {},
    "source": [
     "# Lab 1: Introduction and Kubernetes-Based Deployment\n",
     "\n",
     "## Overview\n",
     "\n",
-    "In this lab, you will:\n",
-    "- Set up Kubernetes cluster with Dynamo platform\n",
-    "- Deploy Dynamo, NVIDIA's inference serving framework\n",
-    "- Configure a model using disaggregated serving (separate prefill and decode workers)\n",
-    "- Test the deployment with OpenAI-compatible API\n",
-    "- Benchmark the deployment using AI-Perf\n",
+    "In this lab, you'll deploy a **disaggregated serving** model on Kubernetes using NVIDIA Dynamo. This architecture separates the inference workload into two specialized workers: one handles the initial prompt processing (prefill), and another generates the response tokens (decode). By splitting these tasks, each worker can be optimized for its specific job, leading to better GPU utilization and more predictable performance.\n",
     "\n",
-    "**What You'll Learn:**\n",
-    "- How to deploy Dynamo on Kubernetes\n",
-    "- Understanding disaggregated serving architecture\n",
-    "- Using Dynamo's OpenAI-compatible API\n",
-    "- Monitoring inference performance\n",
+    "You'll deploy a small language model (Qwen 1.5B) that runs on a single node with 2 GPUs—one GPU for the prefill worker and one for the decode worker. After deployment, you'll test the model using OpenAI-compatible APIs (the same format as ChatGPT's API) and run performance benchmarks to measure response quality.\n",
+    "\n",
+    "This is the foundation for understanding Dynamo's capabilities. In Lab 2, you'll add monitoring to observe what's happening inside your deployment. In Lab 3, you'll see a different architecture where multiple workers share their work more dynamically.\n",
     "\n",
     "**Duration**: ~90 minutes\n",
     "\n",
@@ -48,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9538e02",
+   "id": "f0269ef2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99d29e12",
+   "id": "d8df4c5e",
    "metadata": {},
    "source": [
     "### Step 3: Verify Kubernetes Access\n"
@@ -88,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26cf8a4e",
+   "id": "9b8e7094",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12dc1b1a",
+   "id": "c269fc79",
    "metadata": {},
    "source": [
     "### Step 4: Set Up NGC Authentication\n",
@@ -131,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d6948d0",
+   "id": "bcea5fc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f192ace5",
+   "id": "97039f0f",
    "metadata": {},
    "source": [
     "#### Set HuggingFace Token\n",
@@ -165,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a855747",
+   "id": "7d6e97a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb6aed2",
+   "id": "2b591133",
    "metadata": {},
    "source": [
     "#### Login to NGC Registry"
@@ -197,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77c3307b",
+   "id": "1cda2a07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d4e81bf",
+   "id": "7c1ae39a",
    "metadata": {},
    "source": [
     "### Step 5: Create Your Namespace"
@@ -221,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa6ff6e6",
+   "id": "8810bbfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e7b9897",
+   "id": "3847896d",
    "metadata": {},
    "source": [
     "### Step 6: Create NGC Pull Secret\n",
@@ -250,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dbb998e",
+   "id": "4e621d83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddc859f4",
+   "id": "9e1463f8",
    "metadata": {},
    "source": [
     "### Step 7: Create HuggingFace Token Secret"
@@ -284,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3182bc8c",
+   "id": "2d68a635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ecefd60",
+   "id": "14f80d1f",
    "metadata": {},
    "source": [
     "## Section 2: Install Dynamo Platform\n",
@@ -357,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77cf678d",
+   "id": "d5a43344",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "920405d7",
+   "id": "41dc6530",
    "metadata": {},
    "source": [
     "### Step 2: Install Dynamo Platform\n",
@@ -396,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccd25229",
+   "id": "9746a00a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5e96f34",
+   "id": "49918652",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Platform Pods to Be Ready\n",
@@ -443,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db3f46af",
+   "id": "6283e94c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -491,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea749e9c",
+   "id": "e407404e",
    "metadata": {},
    "source": [
     "\n",
@@ -500,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99feb0c0",
+   "id": "d4e3b5c8",
    "metadata": {},
    "source": [
     "## Section 3: Deploy Your First Model with Disaggregated Serving\n",
@@ -567,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81652c6f",
+   "id": "9eb253ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c10f1873",
+   "id": "81ce2c1a",
    "metadata": {},
    "source": [
     "### Step 2: Deploy the Model\n"
@@ -679,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6e3c565",
+   "id": "f945f879",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5664b81",
+   "id": "4f8a246a",
    "metadata": {},
    "source": [
     "### Step 2b: Expose Frontend Service via NodePort\n",
@@ -710,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "635a7edc",
+   "id": "a9777ba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2424347",
+   "id": "7ab1818b",
    "metadata": {},
    "source": [
     "### Step 3: Monitor Deployment Progress\n"
@@ -755,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8387325a",
+   "id": "7e172776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85f06e0c",
+   "id": "256ed77b",
    "metadata": {},
    "source": [
     "### Step 4: View Worker Logs (Optional)\n",
@@ -824,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "005aefcc",
+   "id": "fe30bc6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0975282a",
+   "id": "3b514233",
    "metadata": {},
    "source": [
     "## Section 4: Testing and Validation\n",
@@ -886,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "701d1402",
+   "id": "f701f4b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66979355",
+   "id": "b6a2557c",
    "metadata": {},
    "source": [
     "### Step 2: Test the `/v1/models` Endpoint\n"
@@ -912,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc5c7dd7",
+   "id": "1756b70c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a73b9d2f",
+   "id": "1ea7554a",
    "metadata": {},
    "source": [
     "### Step 3: Simple Non-Streaming Chat Completion\n"
@@ -935,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac7b82f4",
+   "id": "92aba864",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "906bc55b",
+   "id": "413779db",
    "metadata": {},
    "source": [
     "### Step 4: Test Streaming Response\n"
@@ -965,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fcd53ac",
+   "id": "614b1123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d45327be",
+   "id": "fbdb4b26",
    "metadata": {},
    "source": [
     "### Step 5: Test with Different Parameters\n"
@@ -995,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "407a621e",
+   "id": "931f3759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53fd1bf3",
+   "id": "b56007c2",
    "metadata": {},
    "source": [
     "## Section 5: Benchmarking with AI-Perf\n",
@@ -1047,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "679acffe",
+   "id": "3c17eb15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ffb651",
+   "id": "b8a9cde0",
    "metadata": {},
    "source": [
     "### Step 2: Run Baseline Benchmark (Low Concurrency)\n",
@@ -1138,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9738b998",
+   "id": "75dfb023",
    "metadata": {},
    "source": [
     "---\n",
@@ -1156,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03694334",
+   "id": "dc8d9fc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44707e3b",
+   "id": "3de1b0fb",
    "metadata": {},
    "source": [
     "### View Pod Logs\n"
@@ -1182,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168a97c1",
+   "id": "06889b4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "117eaf3f",
+   "id": "3c669d61",
    "metadata": {},
    "source": [
     "### Check Deployment Status\n"
@@ -1209,7 +1202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96e9469a",
+   "id": "ecde17e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfb64f57",
+   "id": "fb8eea6a",
    "metadata": {},
    "source": [
     "### Check Recent Events\n"
@@ -1236,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc50595f",
+   "id": "d354b102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f86ed600",
+   "id": "b83b6070",
    "metadata": {},
    "source": [
     "### Common Issues\n",
@@ -1315,7 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e881daa",
+   "id": "e1a29d4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd2d53e3",
+   "id": "e707bcd9",
    "metadata": {},
    "source": [
     "### A0. Troubleshooting Pod Issues\n",
@@ -1336,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b67d1d9d",
+   "id": "2970fe53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e75a01de",
+   "id": "d2a26495",
    "metadata": {},
    "source": [
     "### A1. Environment Setup\n"
@@ -1392,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a2326ba",
+   "id": "820d980b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,7 +1412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8621491f",
+   "id": "1460850a",
    "metadata": {},
    "source": [
     "### A2. Install Dynamo Platform (Namespace-Scoped)\n"
@@ -1428,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "391be900",
+   "id": "87e64093",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3cb7f8a",
+   "id": "fd088b2b",
    "metadata": {},
    "source": [
     "### A3. Deploy Your First Model\n",
@@ -1571,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b19d3e52",
+   "id": "29892385",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d122b2ce",
+   "id": "02922572",
    "metadata": {},
    "source": [
     "### A4. Test the Deployment\n"
@@ -1605,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d086b96",
+   "id": "eb77520f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a25e5ee",
+   "id": "d30a67e9",
    "metadata": {},
    "source": [
     "### A5. Benchmark with AI-Perf\n"
@@ -1636,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0681b99e",
+   "id": "e6b3ec34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2577b01b",
+   "id": "7bce9fc7",
    "metadata": {},
    "source": [
     "### A6. Scale Your Deployment\n"
@@ -1680,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93934544",
+   "id": "9962e286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,7 +1692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f365ce71",
+   "id": "e44886db",
    "metadata": {},
    "source": [
     "### A7. Cleanup (⚠️ ONLY AFTER COMPLETING ALL LABS)\n",
@@ -1717,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "672805be",
+   "id": "495bbba9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e052685b",
+   "id": "87c444aa",
    "metadata": {},
    "source": [
     "### A8. Troubleshooting\n"
@@ -1748,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8400f57",
+   "id": "c5d4d283",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1776,7 +1769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7741d36e",
+   "id": "d740d94f",
    "metadata": {},
    "source": [
     "\n"
