--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,31 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d05f208c",
+   "id": "8ef1eb09",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Dynamo with Multi-GPU/Multi-Node Serving\n",
     "\n",
     "## Overview\n",
     "\n",
-    "In this lab, you will:\n",
-    "- Deploy distributed Dynamo across multiple GPUs or nodes\n",
-    "- Understand multi-GPU and multi-node serving architectures\n",
-    "- Enable distributed KV cache awareness and transfer via NIXL\n",
-    "- Monitor distributed components with Grafana\n",
-    "- Learn when to add optional infrastructure (NATS/etcd) for large-scale deployments\n",
+    "In this lab, you'll deploy a **distributed serving** model that works differently from Lab 1. Instead of dedicating specific workers to prefill or decode tasks, you'll create multiple identical workers that can all handle complete requests from start to finish. This is called data parallelism—you're running multiple copies of the same model to serve more users simultaneously.\n",
+    "\n",
+    "The key innovation here is **KV cache sharing**. When one worker processes a request, it stores intermediate computations (the \"KV cache\") that other workers can reuse. If a follow-up question or similar request arrives, a different worker can grab that cached data over the network instead of recomputing everything from scratch. This speeds up responses for conversations and repeated queries.\n",
+    "\n",
+    "You'll deploy 2 workers (each using 1 GPU) that automatically discover each other through Kubernetes and share cached data using NIXL, a high-speed data transfer layer. This architecture scales horizontally—you can add more workers across multiple nodes to handle more traffic.\n",
+    "\n",
+    "**How this differs from Lab 1:**\n",
+    "- Lab 1 used **disaggregated serving** with specialized workers (one does prefill, one does decode)\n",
+    "- Lab 3 uses **distributed serving** with generalist workers (each can do everything)\n",
+    "- Lab 1's workers are tightly coupled (must work together on each request)\n",
+    "- Lab 3's workers are independent (can serve different users, but share cache to help each other)\n",
+    "\n",
+    "**Using them together:**\n",
+    "You could run both architectures side-by-side in the same cluster for different models or workloads. Use disaggregated serving (Lab 1) when you need predictable latency for each request. Use distributed serving (Lab 3) when you have high traffic with repeated patterns (like many users asking similar questions) where cache sharing provides significant speedups.\n",
     "\n",
     "**Prerequisites**: Complete Lab 1 (Dynamo Deployment) and Lab 2 (Monitoring)\n",
     "\n",
-    "**What You'll Learn:**\n",
-    "- How Dynamo discovers and coordinates workers across GPUs/nodes\n",
-    "- KV cache sharing between workers for improved performance\n",
-    "- Two deployment modes: Standard (built-in) vs Advanced (NATS/etcd)\n",
-    "- Monitoring distributed inference metrics\n",
-    "\n",
-    "**Note**: Distributed Dynamo is designed for multi-node Kubernetes clusters or single nodes with multiple GPUs. While we'll deploy it on a single node for learning purposes, maximum benefits are realized when scaling across multiple nodes with high cache hit workloads.\n",
-    "\n",
-    "## Duration: ~45 minutes (standard path) / ~75 minutes (with optional NATS/etcd)\n",
+    "**Duration**: ~45 minutes\n",
     "\n",
     "---\n",
     "\n",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a05f765b",
+   "id": "88efbb33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef63d182",
+   "id": "8d6505b3",
    "metadata": {},
    "source": [
     "---\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09825674",
+   "id": "9f8a01ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e82adfcf",
+   "id": "dd8b985a",
    "metadata": {},
    "source": [
     "### Step 2: Clean Up Lab 1 Deployment (If Still Running)\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f17469a8",
+   "id": "d068857a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51de7b64",
+   "id": "0c0fa7bf",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f833dd00",
+   "id": "2d7a3e18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7883b70a",
+   "id": "3a663eb8",
    "metadata": {},
    "source": [
     "---\n",
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15a697b1",
+   "id": "18221eb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fdd341d",
+   "id": "4ad724ab",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a84cee86",
+   "id": "8a1180c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db2cd2bb",
+   "id": "0e499aa1",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b58bd3ca",
+   "id": "7cbf2bc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efcad325",
+   "id": "9700c7a0",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8572d416",
+   "id": "eaf91624",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4689c9a6",
+   "id": "55773bab",
    "metadata": {},
    "source": [
     "---\n",
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54defa31",
+   "id": "80241382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd327d0f",
+   "id": "93e9eb93",
    "metadata": {},
    "source": [
     "### Step 2: Test Distributed Dynamo with Traffic\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a4e6e2d",
+   "id": "7c22a46d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "088f6caf",
+   "id": "2d1d412e",
    "metadata": {},
    "source": [
     "---\n",
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ea0f0e4",
+   "id": "18e66b2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc761c2",
+   "id": "02e69ad3",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc96658d",
+   "id": "f4298944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48981ed0",
+   "id": "0b69a4fa",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6b12f8d",
+   "id": "d94d39b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a6894ab",
+   "id": "9ca8c04c",
    "metadata": {},
    "source": [
     "---\n",
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26536dc3",
+   "id": "84e37adf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19c9d2b9",
+   "id": "e6f217c5",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d96e6f2",
+   "id": "fc48e357",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c05c351",
+   "id": "2f01efaf",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f85aa814",
+   "id": "c95f86d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95404d1d",
+   "id": "70670e09",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1155,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70a5f5be",
+   "id": "e1621809",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faa76087",
+   "id": "3f4523e0",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1201,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73849731",
+   "id": "b802a8f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20ee8c61",
+   "id": "7cc35e52",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1244,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddd15ef7",
+   "id": "1902f5fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a72b85",
+   "id": "473770bc",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1288,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a35e20f",
+   "id": "4559c40e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4101829a",
+   "id": "2558c983",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8177573b",
+   "id": "3293371a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf9c542c",
+   "id": "9f0b3505",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
